# disposition

./: .gitignore  CHANGELOG.md  CONTEXT.md  LICENSE  README.md  bump.toml  pyproject.toml
disposition/: __init__.py  __main__.py  aging.py  cascade.py  cli.py  coldstart.py  config.py  embeddings.py  gate.py  gitutil.py  index.py  induction.py  injection.py  java.py  llm.py  models.py  project.py  retrieval.py  server.py  store.py
disposition/adapters/: __init__.py  claude_code.py  proxy.py
disposition/capture/: __init__.py  ambient.py  bootstrap.py  correction.py  interview.py  pipeline.py  provenance.py
docs/: development.md  v1-implementation-plan.md
docs/adr/: 0001-style-service-protocol-not-editor-lsp.md  0002-cascading-style-profiles-project-wins.md  0003-style-is-force-injected-and-verified.md  0004-fully-local-no-cloud.md  0005-steering-only-not-a-hand-coding-assistant.md  0006-two-tier-verification-gate-adversarial-and-bounded.md  0007-corrections-must-be-behavior-preserving.md  0008-rules-induced-then-confirmed-triaged-setup.md  0009-self-aging-profile-with-delta-confirmation.md  0010-confirmed-rules-beat-exemplars-on-conflict.md  0011-project-profile-authorship-and-sanction.md  0012-always-run-adaptive-non-leading-interview.md  0013-python-stack-for-v1-poc.md
tests/: test_adapters.py  test_aging.py  test_ambient.py  test_bootstrap.py  test_cascade.py  test_coldstart.py  test_correction.py  test_correction_tiers.py  test_embeddings.py  test_gate.py  test_gate_deterministic.py  test_index.py  test_induction.py  test_injection.py  test_interview.py  test_interview_adaptive.py  test_java.py  test_llm.py  test_pipeline.py  test_project.py  test_provenance.py  test_proxy.py  test_retrieval.py  test_semantic_embedder.py  test_store.py
(+4 files in other folders)
